--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/nikhi/workspace_j2e/BarcodeGenerator/extlib/barcode.jar"/>
-	<classpathentry kind="lib" path="C:/Users/nikhi/workspace_j2e/BarcodeGenerator/extlib/barbecue-1.5-beta1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Nikhil Shinde/workspace-java/BarcodeGenerator/extlib/barcode.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Nikhil Shinde/workspace-java/BarcodeGenerator/extlib/barbecue-1.5-beta1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
